compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__case6.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case [3.33], 1 { x, y if x < y -> 1 }"
---
----- SOURCE CODE
case [3.33], 1 { x, y if x < y -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:26
  │
1 │ case [3.33], 1 { x, y if x < y -> 1 }
  │                          ^

Expected type:

    Int

Found type:

    List(Float)

error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:1:1
  │
1 │ case [3.33], 1 { x, y if x < y -> 1 }
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    _, _
