compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__case_exhaustiveness1.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1536
expression: "\npub fn main(b) {\n    case b {\n        True -> Nil\n    }\n}\n"
---
error: Not exhaustive pattern match
  ┌─ /src/one/two.gleam:3:5
  │  
3 │ ╭     case b {
4 │ │         True -> Nil
5 │ │     }
  │ ╰─────^

This case expression does not match all possibilities.
Each constructor must have a pattern that matches it or
else it could crash.

These values are not matched:

  - False

