compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__case_exhaustiveness4.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1466
expression: "\npub type Media {\n    Audio(BitString)\n    Video(BitString)\n    Text(String)\n}\npub fn main(m) {\n    case m {\n        Video(_) -> m\n    }\n}\n"

---
error: Not exhaustive pattern match
   ┌─ /src/one/two.gleam:8:5
   │  
 8 │ ╭     case m {
 9 │ │         Video(_) -> m
10 │ │     }
   │ ╰─────^

This expression does not cover all possibilities.
Each constructor must have a pattern that can match.

Not matched constructors: Audio, Text

