compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__case_exhaustiveness5.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1550
expression: "\npub type Media {\n    Audio(BitString)\n    Video(BitString)\n    Text(String)\n}\npub fn main(m) {\n    case m {\n        Audio(_) | Text(_) -> m\n    }\n}\n"
---
error: Not exhaustive pattern match
   ┌─ /src/one/two.gleam:8:5
   │  
 8 │ ╭     case m {
 9 │ │         Audio(_) | Text(_) -> m
10 │ │     }
   │ ╰─────^

This case expression does not match all possibilities.
Each constructor must have a pattern that matches it or
else it could crash.

These values are not matched:

  - Video


