compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__const_record_update_of_record_constructor_function.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Wibble {\n  Wibble(wibble: Int, wobble: Int)\n}\n\npub const a = Wibble\npub const b = Wibble(..a, wobble: 8)\n"
---
----- SOURCE CODE

pub type Wibble {
  Wibble(wibble: Int, wobble: Int)
}

pub const a = Wibble
pub const b = Wibble(..a, wobble: 8)


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:7:24
  │
7 │ pub const b = Wibble(..a, wobble: 8)
  │                        ^

Expected type:

    Wibble

Found type:

    fn(Int, Int) -> Wibble
